test_regress/t/t_mailbox_bad.out
%Error: t/t_mailbox.v:20:4: Can't find typedef: 'mailbox'
   20 |    mailbox #(int) m;
      |    ^~~~~~~
%Error: Internal Error: t/t_mailbox.v:20:14: ../V3LinkDot.cpp:#: Pin not under instance?
   20 |    mailbox #(int) m;
      |              ^~~
